<resources>
    <string name="app_name">Grab Application</string>
    <string name="prompt_phone_number">Nhập số điện thoại</string>
    <string name="prompt_password">Nhâp mật khẩu</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="label_ok">OK</string>
    <string name="label_cancel">Hủy</string>
    <string name="error">Lỗi</string>

    <string name="channel_id">channel1</string>

    <string name="description_map_screen">Đặt xe</string>
    <string name="prompt_end_address">Bạn đến đâu?</string>

    //Info driver fragment
    <string name="age">Tuổi: %s</string>
    <string name="start_date">Ngày gia nhập: %s</string>
    <string name="grab_bike">GrabBike</string>
    <string name="grab_car">GrabCar</string>
    <string name="choose_driver">Chọn tài xế</string>
    <string name="distance_to_you">Khoảng cách đến chỗ bạn: %s</string>
    <string name="time_to_you">Thời gian đến chỗ bạn: %s</string>

    //Find place fragment
    <string name="description_find_place">Nhập nơi bạn đến</string>
    <string name="time_to_move">Thời gian di chuyển: %s</string>
    <string name="distance_length">Khoảng cách: %s</string>
    <string name="confirm_book_driver">Bạn có muốn đặt cuốc xe này chứ?</string>
    <string name="try_again">Thử lại</string>
    <string name="back">Thoát</string>
    <string name="error_connect_to_driver">Lỗi kết nối đến tài xế</string>
    <string name="price">%s VNĐ</string>
	<string name="book_vehicle">Đặt xe</string>

    //Wait driver fragment
    <string name="description_wait_driver">Đang chờ tài xế</string>
    <string name="cancel_book">Hủy chuyến</string>
    <string name="no">Không</string>
    <string name="confirm_cancel_book">Bạn có muốn hủy chuyến chứ?</string>
    <string name="driver_cancel">Tài xế không nhận cuốc xe.\n Bạn hãy đặt cuốc mới.</string>

    //Login Activity
    <string name="sign_up"><u>Đăng ký</u></string>
    <string name="login_false">Lỗi đăng nhập</string>

    //SignUp Activity
    <string name="country_code_default">+84</string>
    <string name="hint_phone_number">87654321</string>
    <string name="next">Tiếp</string>
    <string name="description_input_phone_number">Nhập số di động của bạn</string>
    <string name="description_input_password">Nhập mật khẩu</string>
    <string name="description_input_info">Nhập thông tin khác</string>
    <string name="input_name">Nhập họ và tên của bạn</string>
    <string name="hint_input_name">Trần Văn Nam</string>
    <string name="sex">Chọn giới tính</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="input_age">Nhập tuổi</string>
    <string name="hint_input_age">24</string>
    <string name="error_input_name">Bạn chưa nhập họ và tên</string>
    <string name="error_input_age">Bạn chưa nhập tuổi</string>
    <string name="error_phone_number_invalid">Số điện thoại không hợp lệ</string>
    <string name="error_password_invalid">Mật khẩu không hợp lệ</string>
    <string name="connect_server_error">Lỗi kết nối máy chủ</string>

	// Main Activity
	<string name="driver_arriving_origin">Tài xế đang đến đón bạn</string>
    <string name="driver_arrived_origin">Tài xế đã đến điểm đón</string>
	<string name="driver_start_going">Đang di chuyển</string>
    <string name="driver_arrived_destination">Đã đến điểm đến</string>

	<string name="notify_time_driver_arrived_origin">Tài xế sẽ đến điểm đón lúc %s</string>
	<string name="notify_time_driver_arrived_destination">Thời gian đến lúc %s</string>
	<string name="notify_end_address">Điểm đến: %s</string>
	<string name="notify_start_address">Điểm đón: %s</string>

	// Bill Fragment
	<string name="description_bill_fragment">Thông tin chuyến xe</string>
	<string name="vote_driver">Vote cho tài xế</string>
    <string name="notify_price">Giá tiền: %s</string>
    <string name="end">Kết thúc</string>

    // Driver Suggest Fragment
    <string name="description_driver_suggest">Tài xế gợi ý cho bạn</string>
    <string name="distance_to_you_driver_suggest">Khoảng cách đến chỗ bạn: %skm</string>

    // Account Info Fragment
    <string name="sex_info">Giới tính: %s</string>
    <string name="phone_number_info">Số điện thoại: %s</string>

	//Notify
	<string name="notify_driver_start_arriving_destination">Bắt đầu thực hiện cuốc xe</string>
	<string name="notify_driver_arrived_destination">Tài xế đã đến điểm đến</string>
	<string name="notify_bill">Chuyến đi đã hoàn thành. Hãy thanh toán cuốc xe</string>
</resources>