<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.grabapplication.viewmodel.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/description_input_info"
            android:textColor="@color/color_black"
            android:textSize="@dimen/text_size_description"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/description">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_name"
                android:textColor="@color/color_child_info_driver"
                android:textSize="@dimen/text_size_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_text_button_setting_activity"
                android:focusableInTouchMode="true"
                android:gravity="start"
                android:hint="@string/hint_input_name"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:singleLine="true"
                android:textSize="@dimen/text_size_name"
                android:text="Tran Van Nam"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/sex"
                android:textColor="@color/color_child_info_driver"
                android:textSize="@dimen/text_size_name" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.checkRadioMale()}"
                    android:checked="@{viewModel.isCheckMale()}"
                    android:text="@string/male"
                    android:textSize="@dimen/text_size_name" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:onClick="@{() -> viewModel.checkRadioFemale()}"
                    android:checked="@{!viewModel.isCheckMale()}"
                    android:text="@string/female"
                    android:textSize="@dimen/text_size_name" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/input_age"
                android:textColor="@color/color_child_info_driver"
                android:textSize="@dimen/text_size_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_text_button_setting_activity"
                android:focusableInTouchMode="true"
                android:gravity="start"
                android:hint="@string/hint_input_age"
                android:inputType="number"
                android:maxLines="1"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:singleLine="true"
                android:textSize="@dimen/text_size_name"
                android:text="24"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnNextInputInfo"
            style="@style/Widget.Button.Simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_style"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>