<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
        
        <variable
            name="adapter"
            type="com.example.grabapplication.adapters.ListPlaceAdapter" />

        <variable
            name="viewModel"
            type="com.example.grabapplication.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEndAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:hint="@string/prompt_end_address"
            android:imeOptions="actionDone"
            android:inputType="textNoSuggestions"
            android:focusableInTouchMode="true"
            android:singleLine="true"
            android:maxLines="1"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/edtEndAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:setAdapter="@{adapter}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="20dp"
            android:visibility="@{viewModel.isShowingListPlace ? View.VISIBLE : View.GONE}"
            tools:visibility="gone"/>

        <LinearLayout
            android:id="@+id/layout_book_driver"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/edtEndAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="@{viewModel.isShowingListPlace ? View.GONE : View.VISIBLE}">

            <LinearLayout
                android:id="@+id/layout_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_length"
                    android:textColor="@color/color_child_info_driver"
                    android:textSize="@dimen/text_size_info" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.distancePlaceChoose.distanceText}"
                    android:textColor="@color/color_child_info_driver"
                    android:textSize="@dimen/text_size_info"
                    tools:text="1 km" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_to_move"
                    android:textColor="@color/color_child_info_driver"
                    android:textSize="@dimen/text_size_info" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.distancePlaceChoose.durationText}"
                    android:textColor="@color/color_child_info_driver"
                    android:textSize="@dimen/text_size_info"
                    tools:text="10 phút" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_vehicle"
                android:layout_marginTop="70dp"
                android:layout_gravity="center"
                app:onSingleClick="@{() -> viewModel.bookDriver()}"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
