<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.grabapplication.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fragment_book_border"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/layout_info_driver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/layout_name_driver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.bookInfo.driverInfo.name}"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_size_name"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Tran Van Nam" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_start_with_info"
                    android:src="@drawable/black_circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_with_info"
                    android:text="@{String.valueOf(viewModel.bookInfo.driverInfo.rate)}"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_size_name"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="5.0" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_start_with_info"
                    android:src="@drawable/star" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@{@string/age(viewModel.bookInfo.driverInfo.age)}"
                android:textColor="@color/color_child_info_driver"
                android:textSize="@dimen/text_size_info"
                tools:text="@string/age" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@{@string/start_date(viewModel.bookInfo.driverInfo.startDate)}"
                android:textColor="@color/color_child_info_driver"
                android:textSize="@dimen/text_size_info"
                tools:text="@string/start_date" />

            <LinearLayout
                android:id="@+id/layout_info_vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.bookInfo.driverInfo.typeVehicle}"
                    android:textColor="@color/color_child_info_driver"
                    android:textSize="@dimen/text_size_info"
                    tools:text="Honda Wave" />

                <ImageView
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_start_with_info"
                    android:src="@drawable/black_circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_with_info"
                    android:text="@{viewModel.bookInfo.driverInfo.licensePlateNumber}"
                    android:textColor="@color/color_child_info_driver"
                    android:textSize="@dimen/text_size_info"
                    tools:text="29G1-075.80" />

                <ImageView
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_start_with_info"
                    android:src="@drawable/black_circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_with_info"
                    android:text="@{viewModel.bookInfo.driverInfo.typeDriver}"
                    android:textColor="@color/color_child_info_driver"
                    android:textSize="@dimen/text_size_info"
                    tools:text="GrabBike" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@{@string/distance_to_you(viewModel.distanceDriver.distanceText)}"
                android:textColor="@color/color_child_info_driver"
                android:textSize="@dimen/text_size_info"
                tools:text="@string/distance_to_you" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@{@string/time_to_you(viewModel.distanceDriver.durationText)}"
                android:textColor="@color/color_child_info_driver"
                android:textSize="@dimen/text_size_info"
                tools:text="@string/time_to_you" />
        </LinearLayout>

        <Button
            android:id="@+id/btnBook"
            style="@style/Widget.Button.Simple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_style"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/choose_driver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_info_driver"
            app:onSingleClick="@{() -> viewModel.onItemClickListener.openFindPlaceFragment()}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>